Editing after Make Single User for Object Data #73797

Closed
opened 2020-02-14 12:44:09 +01:00 by Julien Kaspar · 7 comments
Member

System Information
Operating system: Linux-5.3.0-29-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.48.02

Blender Version
Broken: version: 2.83 (sub 2), branch: master, commit date: 2020-02-14 05:14, hash: f621f03e4b

Short description of error
When making multiple objects that share the same object data single user, editing & selecting the geometry in edit mode becomes impossible and it has a tendency to break the mesh.

8_bugsbugsbugsbugs.mp4

Exact steps for others to reproduce the error

  • Create a sphere
  • Alt + D duplicate the sphere multiple times
  • Select all spheres and use the operator "Make Single User" -> "Object Data"
  • Try selecting & editing a sphere in edit mode
  • Exit out of edit mode
**System Information** Operating system: Linux-5.3.0-29-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.48.02 **Blender Version** Broken: version: 2.83 (sub 2), branch: master, commit date: 2020-02-14 05:14, hash: `f621f03e4b` **Short description of error** When making multiple objects that share the same object data single user, editing & selecting the geometry in edit mode becomes impossible and it has a tendency to break the mesh. [8_bugsbugsbugsbugs.mp4](https://archive.blender.org/developer/F8339253/8_bugsbugsbugsbugs.mp4) **Exact steps for others to reproduce the error** - Create a sphere - Alt + D duplicate the sphere multiple times - Select all spheres and use the operator "Make Single User" -> "Object Data" - Try selecting & editing a sphere in edit mode - Exit out of edit mode
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm when done from the search.
Seems like a problem with 50d5c03e2d

Can confirm when done from the search. Seems like a problem with 50d5c03e2d
Philipp Oeser self-assigned this 2020-03-04 10:08:11 +01:00
Member

Some notes:

  • All is fine if we call this with both Object & Object Data before first clicking OK [Object can be unchecked in Adjust Last Operation, thats fine then].
  • All is fine if we call this with both Materials & Object Data before first clicking OK [Materials can be unchecked in Adjust Last Operation, thats fine then].
  • Problem only arises if we only have Object Data checked when first clicking OK [Object can be checked in Adjust Last Operation, thats fine then].

Seems like it is necessary to call DEG_relations_tag_update(bmain) for the failing case.

Checking further...

Some notes: - All is fine if we call this with both `Object` & `Object Data` before first clicking OK [`Object` can be unchecked in Adjust Last Operation, thats fine then]. - All is fine if we call this with both `Materials` & `Object Data` before first clicking OK [`Materials` can be unchecked in Adjust Last Operation, thats fine then]. - Problem only arises if we only have `Object Data` checked when first clicking OK [`Object` can be checked in Adjust Last Operation, thats fine then]. Seems like it is necessary to call `DEG_relations_tag_update(bmain)` for the failing case. Checking further...

This issue was referenced by 9c62a8c8e5

This issue was referenced by 9c62a8c8e53fbcd14100153b0abc659771b1f551
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73797
No description provided.